<resources>
  <string name="app_name">Sudoku</string>
  <string name="vDefault"/>
  <string name="vZero">0</string>
  <string name="v0">1</string>
  <string name="v1">2</string>
  <string name="v2">3</string>
  <string name="v3">4</string>
  <string name="v4">5</string>
  <string name="v5">6</string>
  <string name="v6">7</string>
  <string name="v7">8</string>
  <string name="v8">9</string>
  <string name="calculate">Calculate</string>
  <string name="newGame">New game</string>
  <string name="difficulty">Choose difficulty</string>
  <string name="sudokuSolver">Sudoku calculator</string>
  <string name="statistics">Statistics</string>
  <string name="continueGame">Continue</string>
  <string name="invalidInput">Incorrect values</string>
  <string name="invalidSudoku">Invalid sudoku</string>
  <string name="congratulations">Solved!</string>
  <string name="reset">Reset</string>
  <string name="light">light</string>
  <string name="dark">dark</string>
  <string name="insane">Insane</string>
  <string name="hard">Hard</string>
  <string name="normal">Normal</string>
  <string name="easy">Easy</string>
  <string name="difficultyLevel">dif</string>
  <string name="difficultyStats">Difficulty</string>
  <string name="solvedStats">Solved</string>
  <string name="savedGame">saved</string>
  <string name="savedProgressDifficulty">savedDif</string>
  <string name="mainMenu">Main menu</string>
  <string name="back">Back</string>
  <string name="hintSettings">Hint settings</string>
  <string name="highlightRows">Incorrect rows</string>
  <string name="highlightColumns">Incorrect columns</string>
  <string name="highlightBlocks">Incorrect blocks</string>
  <string name="hintPossibleValues">Possible values</string>
  <string name="hintCalculations">Calculation helper</string>
  <string name="hintSettingsStorage">hs</string>
  <string name="hintRows">hr</string>
  <string name="hintColumns">hc</string>
  <string name="hintBlocks">hb</string>
  <string name="hintPosValues">hv</string>
  <string name="hintCalc">hCalc</string>
</resources>
