<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/menuDifficultyLayout"
              tools:context=".containers.menu.MenuDifficulty">

  <Button
    style="@style/menu"
    android:id="@+id/insane"
    android:text="@string/insane"/>
  <Button
    style="@style/menu"
    android:id="@+id/hard"
    android:text="@string/hard"/>
  <Button
    style="@style/menu"
    android:id="@+id/normal"
    android:text="@string/normal"/>
  <Button
    style="@style/menu"
    android:id="@+id/easy"
    android:text="@string/easy"/>

</LinearLayout>
