<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".PossibleValues"
             android:id="@+id/possibleValuesFragment"
             android:layout_height="wrap_content"
             android:layout_width="match_parent">

  <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:ignore="OnClick">

    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/vZero"
      android:text="@string/vZero"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:gravity="center"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/v0"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v0"
      android:text="@string/v0"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v1"
      app:layout_constraintLeft_toRightOf="@+id/vZero"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v1"
      android:text="@string/v1"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v2"
      app:layout_constraintLeft_toRightOf="@+id/v0"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v2"
      android:text="@string/v2"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v3"
      app:layout_constraintLeft_toRightOf="@+id/v1"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v3"
      android:text="@string/v3"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v4"
      app:layout_constraintLeft_toRightOf="@+id/v2"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v4"
      android:text="@string/v4"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v5"
      app:layout_constraintLeft_toRightOf="@+id/v3"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v5"
      android:text="@string/v5"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v6"
      app:layout_constraintLeft_toRightOf="@+id/v4"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v6"
      android:text="@string/v6"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toLeftOf="@+id/v7"
      app:layout_constraintLeft_toRightOf="@+id/v5"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v7"
      android:text="@string/v7"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toRightOf="@+id/v8"
      app:layout_constraintLeft_toRightOf="@+id/v6"
      app:layout_constraintDimensionRatio="1:1"/>
    <TextView
      android:background="@drawable/dark_border"
      android:id="@+id/v8"
      android:text="@string/v8"
      android:gravity="center"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:onClick="onClickValue"
      android:clickable="true"
      android:focusable="true"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintTop_toTopOf="@+id/vZero"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/v7"
      app:layout_constraintDimensionRatio="1:1"/>

  </android.support.constraint.ConstraintLayout>

</FrameLayout>