<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:id="@+id/hintMenu"
  android:background="@drawable/statistics"
  android:paddingTop="@dimen/stats_radius"
  android:paddingBottom="@dimen/stats_radius"
  style="@style/statsAndHintsLayout"
  app:layout_constraintTop_toBottomOf="@id/statsTable">

  <TextView
    style="@style/statsCellValue"
    android:text="@string/hintSettings"
    android:textSize="@dimen/stats_header"
    android:layout_gravity="center"/>

  <LinearLayout
    android:layout_height="@dimen/radius"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/radius"
    android:layout_marginBottom="@dimen/radius"
    android:background="@drawable/stats_line_corner"
    android:id="@+id/blackLine">
    <View
      android:layout_height="@dimen/radius"
      android:layout_width="@dimen/zero"/>
  </LinearLayout>

  <TableLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="0"
    android:id="@+id/hintMenuTable"
    app:layout_constraintTop_toBottomOf="@+id/blackLine">

    <TableRow style="@style/hintMenuRows">
      <TextView
        style="@style/hintMenuDescription"
        android:text="@string/highlightRows"
        app:layout_constraintLeft_toLeftOf="@+id/switcherRows"/>
      <android.support.v7.widget.SwitchCompat
        android:theme="@style/ThemeHintMenuSwitcher"
        style="@style/styleHintMenuSwitcher"
        android:checked="true"
        android:id="@+id/switcherRows"/>
    </TableRow>

    <TableRow style="@style/hintMenuRows">
      <TextView
        style="@style/hintMenuDescription"
        android:text="@string/highlightColumns"
        app:layout_constraintLeft_toLeftOf="@+id/switcherColumns"/>
      <android.support.v7.widget.SwitchCompat
        android:theme="@style/ThemeHintMenuSwitcher"
        style="@style/styleHintMenuSwitcher"
        android:checked="true"
        android:id="@+id/switcherColumns"/>
    </TableRow>

    <TableRow style="@style/hintMenuRows">
      <TextView
        style="@style/hintMenuDescription"
        android:text="@string/highlightBlocks"
        app:layout_constraintLeft_toLeftOf="@+id/switcherBlocks"/>
      <android.support.v7.widget.SwitchCompat
        android:theme="@style/ThemeHintMenuSwitcher"
        style="@style/styleHintMenuSwitcher"
        android:checked="true"
        android:id="@+id/switcherBlocks"/>
    </TableRow>

    <TableRow style="@style/hintMenuRows">
      <TextView
        style="@style/hintMenuDescription"
        android:text="@string/hintPossibleValues"
        app:layout_constraintLeft_toLeftOf="@+id/hintPossibleValues"/>
      <android.support.v7.widget.SwitchCompat
        android:theme="@style/ThemeHintMenuSwitcher"
        style="@style/styleHintMenuSwitcher"
        android:id="@+id/hintPossibleValues"/>
    </TableRow>

    <TableRow style="@style/hintMenuRows">
      <TextView
        style="@style/hintMenuDescription"
        android:text="@string/hintCalculations"
        app:layout_constraintLeft_toLeftOf="@+id/hintCalculations"/>
      <android.support.v7.widget.SwitchCompat
        android:theme="@style/ThemeHintMenuSwitcher"
        style="@style/styleHintMenuSwitcher"
        android:id="@+id/hintCalculations"/>
    </TableRow>

  </TableLayout>

</LinearLayout>
